--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Store</title>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
     <link rel="stylesheet" href="./src/output.css" />
   </head>
   <body>
@@ -28,6 +39,16 @@
             </ul>
           </div>
           <div class="navbar-end">
+            <div class="indicator">
+              <span
+                class="indicator-item badge badge-secondary"
+                id="products-amount"
+                >o</span
+              >
+              <button class="btn">
+                <i class="fa-solid fa-cart-shopping text-2xl"></i>
+              </button>
+            </div>
             <!-- LOGIN -->
             <!-- BADGE -->
             <!-- DARK MODE -->
@@ -45,28 +66,32 @@
             id="products-list"
           ></ul>
           <template>
-            <li data-aos="zoom-in-right">
-              <div class="card bg-base-100 w-full shadow-sm">
-                <figure>
-                  <img
-                    class="product-image"
-                    src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-                    alt="Shoes"
-                  />
-                </figure>
-                <div class="card-body">
-                  <h2 class="card-title line-clamp-1">Card Title</h2>
-                  <p class="descraption line-clamp-3">
-                    A card component has a figure, a body part, and inside body
-                    there are title and actions parts
-                  </p>
-                  <h4 class="price"></h4>
-                  <div class="card-actions justify-end">
-                    <button class="btn btn-primary">Buy Now</button>
+            <a href="./about.html">
+              <li data-aos="zoom-in-right">
+                <div class="card bg-base-100 w-full shadow-sm">
+                  <figure>
+                    <img
+                      class="product-image"
+                      src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                      alt="Shoes"
+                    />
+                  </figure>
+                  <div class="card-body">
+                    <h2 class="card-title line-clamp-1">Card Title</h2>
+                    <p class="descraption line-clamp-3">
+                      A card component has a figure, a body part, and inside
+                      body there are title and actions parts
+                    </p>
+                    <h4 class="price"></h4>
+                    <div class="card-actions justify-end">
+                      <button class="btn btn-primary buy-button">
+                        Buy Now
+                      </button>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </li>
+              </li></a
+            >
           </template>
         </div>
         <div class="flex justify-center">
@@ -74,7 +99,10 @@
         </div>
       </section>
     </main>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="./src/js/app.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/toastify-js"
+    ></script>
+    <script type="module" src="./src/js/app.js"></script>
   </body>
 </html>
