--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,10 +16,10 @@
           <div class="navbar-center">
             <ul class="menu menu-horizontal">
               <li>
-                <a href="">Home</a>
+                <a href="./index.html">Home</a>
               </li>
               <li>
-                <a href="">About</a>
+                <a href="#">About</a>
               </li>
               <li>
                 <a href="">Contact</a>
