--- a/about.html
+++ b/about.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
     <link rel="stylesheet" href="./src/output.css" />
   </head>
   <body>
@@ -11,7 +23,13 @@
       <div class="align-elements">
         <div class="navbar">
           <div class="navbar-start">
-            <!-- LOGO -->
+            <a href="/" data-component-name="logo-home"
+            ><img
+              src="https://cdn.shopify.com/b/shopify-brochure2-assets/177d09fab2ac0c32b7e0fe9f4ab1a9dd.svg"
+              alt="Shopify logo"
+              width="125"
+              height="36"
+          /></a>
           </div>
           <div class="navbar-center">
             <ul class="menu menu-horizontal">
@@ -19,18 +37,54 @@
                 <a href="./index.html">Home</a>
               </li>
               <li>
-                <a href="#">About</a>
+                <a href="">About</a>
               </li>
               <li>
                 <a href="">Contact</a>
               </li>
             </ul>
           </div>
-          <div class="navbar-end">
-            <!-- LOGIN -->
-            <!-- BADGE -->
-            <!-- DARK MODE -->
+          <div class="navbar-end gap-6">
+            <a href="https://user-information-form-ten.vercel.app/"
+            ><i class="fa-regular fa-circle-user text-3xl"></i
+          ></a>
+          <div class="indicator">
+            <span
+              class="indicator-item badge badge-secondary"
+              id="products-amount"
+              >o</span
+            >
+            <button class="btn">
+              <i class="fa-solid fa-cart-shopping text-2xl"></i>
+            </button>
           </div>
+          <label class="swap swap-rotate">
+            <input
+              type="checkbox"
+              class="theme-controller"
+              value="synthwave"
+            />
+
+            <svg
+              class="swap-off h-10 w-10 fill-current"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"
+              />
+            </svg>
+
+            <svg
+              class="swap-on h-10 w-10 fill-current"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z"
+              />
+            </svg>
+          </label>
         </div>
       </div>
     </header>
@@ -38,11 +92,28 @@
     <main>
       <section>
         <div class="align-elements">
-          <h2 class="text-5x1 title">About</h2>
-        </div>
+          <h2 class="text-5x1 title my-10 text-3xl flex justify-center">About the product</h2>
+          <div class="card grid grid-cols-1 md:grid-cols-2 gap-10">
+            <div class="shadow-lg border-b-8">
+              <figure>
+                <img class="about-img h-96 object-cover"/>
+              </figure>
+            </div>
+            <div class="card-body">
+               <h2 class="text-2xl product-id my-5">Mahsulot ID:</h2>
+               <h2 class="card-title about-title text-3xl"></h2>
+               <p class="about-description my"></p>
+               <div class="discountPercentage text-2xl my-5"></div>
+               <div class="about-price font-bold text-3xl"></div>
+               <div class="card-actions justify-end">
+                <button class="btn btn-primary buy-btn">Buy Now</button>
+               </div>
+            </div>
+          </div>
       </section>
     </main>
 
     <script type="module" src="./src/js/about.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   </body>
 </html>
