--- a/index.html
+++ b/index.html
@@ -23,15 +23,21 @@
       <div class="align-elements">
         <div class="navbar">
           <div class="navbar-start">
-            <!-- LOGO -->
+            <a href="/" data-component-name="logo-home"
+              ><img
+                src="https://cdn.shopify.com/b/shopify-brochure2-assets/177d09fab2ac0c32b7e0fe9f4ab1a9dd.svg"
+                alt="Shopify logo"
+                width="125"
+                height="36"
+            /></a>
           </div>
           <div class="navbar-center">
             <ul class="menu menu-horizontal">
               <li>
-                <a href="#">Home</a>
+                <a href="/">Home</a>
               </li>
               <li>
-                <a href="./about.html">About</a>
+                <a href="">About</a>
               </li>
               <li>
                 <a href="">Contact</a>
@@ -39,7 +45,9 @@
             </ul>
           </div>
           <div class="navbar-end gap-6">
-            <!-- LOGIN -->
+            <a href="https://user-information-form-ten.vercel.app/"
+              ><i class="fa-regular fa-circle-user text-3xl"></i
+            ></a>
             <div class="indicator">
               <span
                 class="indicator-item badge badge-secondary"
@@ -51,14 +59,12 @@
               </button>
             </div>
             <label class="swap swap-rotate">
-              <!-- this hidden checkbox controls the state -->
               <input
                 type="checkbox"
                 class="theme-controller"
                 value="synthwave"
               />
 
-              <!-- sun icon -->
               <svg
                 class="swap-off h-10 w-10 fill-current"
                 xmlns="http://www.w3.org/2000/svg"
@@ -69,7 +75,6 @@
                 />
               </svg>
 
-              <!-- moon icon -->
               <svg
                 class="swap-on h-10 w-10 fill-current"
                 xmlns="http://www.w3.org/2000/svg"
