--- a/index.html
+++ b/index.html
@@ -98,7 +98,12 @@
             <div>
               <fieldset class="fieldset">
                 <legend class="fieldset-legend">Maxsulot qidrish:</legend>
-                <input id="search-text" type="text" class="input w-80" placeholder="Type here" />
+                <input
+                  id="search-text"
+                  type="text"
+                  class="input w-80"
+                  placeholder="Type here"
+                />
               </fieldset>
             </div>
           </div>
