--- a/cart.html
+++ b/cart.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Online Store</title>
+    <title>Cart</title>
+    <link rel="stylesheet" href="./src/output.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -16,7 +17,6 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
-    <link rel="stylesheet" href="./src/output.css" />
   </head>
   <body>
     <header class="bg-base-300">
@@ -49,16 +49,14 @@
               ><i class="fa-regular fa-circle-user text-3xl"></i
             ></a>
             <div class="indicator">
-              <a href="./cart.html">
-                <span
-                  class="indicator-item badge badge-secondary"
-                  id="products-amount"
-                  >o</span
-                >
-                <button class="btn">
-                  <i class="fa-solid fa-cart-shopping text-2xl"></i>
-                </button>
-              </a>
+              <span
+                class="indicator-item badge badge-secondary"
+                id="products-amount"
+                >o</span
+              >
+              <button class="btn">
+                <i class="fa-solid fa-cart-shopping text-2xl"></i>
+              </button>
             </div>
             <label class="swap swap-rotate">
               <input
@@ -91,67 +89,33 @@
         </div>
       </div>
     </header>
-
     <main>
       <section>
         <div class="align-elements">
-          <div class="flex justify-between items-center">
-            <h2 class="text-3xl my-10">Products:</h2>
-            <div>
-              <fieldset class="fieldset">
-                <legend class="fieldset-legend">Maxsulot qidrish:</legend>
-                <input
-                  id="search-text"
-                  type="text"
-                  class="input w-80"
-                  placeholder="Type here"
-                />
-              </fieldset>
-            </div>
-          </div>
-          <ul
-            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5"
-            id="products-list"
-          ></ul>
-          <template>
-            <a href="./about.html">
-              <li data-aos="zoom-in-right">
-                <div class="card bg-base-100 w-full shadow-lg">
-                  <figure>
-                    <img
-                      class="product-image"
-                      src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-                      alt="Shoes"
-                    />
-                  </figure>
-                  <div class="card-body">
-                    <h2 class="card-title line-clamp-1">Card Title</h2>
-                    <p class="descraption line-clamp-3">
-                      A card component has a figure, a body part, and inside
-                      body there are title and actions parts
-                    </p>
-                    <h4 class="price"></h4>
-                    <div class="card-actions justify-end">
-                      <button class="btn btn-primary buy-button">
-                        Buy Now
-                      </button>
-                    </div>
-                  </div>
+          <h2 class="my-10 text-3xl font-medium">Cart:</h2>
+          <ul id="card-list" class="cart-list"></ul>
+          <template id="cart-template">
+            <li class="card bg-base-200 shadow-sm hover:shadow-lg">
+              <div
+                class="flex flex-row items-center w-full p-5 gap-5 justify-between"
+              >
+                <img class="w-20 h-20 rounded-2xl product-image" src="" alt="" />
+                <div>
+                  <h3 class="name">Compyuter</h3>
+                  <h5 class="Brand">Brand: Acer</h5>
                 </div>
-              </li></a
-            >
+                <p>price:500$</p>
+                <div class="flex items-center gap-3">
+                  <button class="btn">+</button>
+                  <span class="font semibold text-xl font-bold">0</span>
+                  <button class="btn">-</button>
+                </div>
+              </div>
+            </li>
           </template>
-        </div>
-        <div class="flex justify-center">
-          <button class="btnEl btn btn-dash btn-warning my-5">Show More</button>
         </div>
       </section>
     </main>
-    <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/toastify-js"
-    ></script>
-
-    <script type="module" src="./src/js/app.js"></script>
+    <script type="module" src="./src/js/cart.js"></script>
   </body>
 </html>
