--- a/cart.html
+++ b/cart.html
@@ -104,7 +104,7 @@
                   <h3 class="name">Compyuter</h3>
                   <h5 class="Brand">Brand: Acer</h5>
                 </div>
-                <p>price:500$</p>
+                <p class="price">price:500$</p>
                 <div class="flex items-center gap-3">
                   <button class="btn">+</button>
                   <span class="font semibold text-xl font-bold">0</span>
