--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
+    <title>Product</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -37,7 +37,7 @@
                 <a href="/">Home</a>
               </li>
               <li>
-                <a href="">About</a>
+                <a href="">Product</a>
               </li>
               <li>
                 <a href="">Contact</a>
@@ -45,9 +45,9 @@
             </ul>
           </div>
           <div class="navbar-end gap-6">
-            <a href="https://user-information-form-ten.vercel.app/"
-              ><i class="fa-regular fa-circle-user text-3xl"></i
-            ></a>
+            <a href="https://user-information-form-ten.vercel.app/">
+              <i class="fa-regular fa-circle-user text-3xl"></i>
+            </a>
             <div class="indicator">
               <a href="./cart.html">
                 <span
@@ -66,7 +66,6 @@
                 class="theme-controller"
                 value="synthwave"
               />
-
               <svg
                 class="swap-off h-10 w-10 fill-current"
                 xmlns="http://www.w3.org/2000/svg"
@@ -76,7 +75,6 @@
                   d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"
                 />
               </svg>
-
               <svg
                 class="swap-on h-10 w-10 fill-current"
                 xmlns="http://www.w3.org/2000/svg"
@@ -96,20 +94,20 @@
       <section>
         <div class="align-elements">
           <h2 class="text-5x1 title my-10 text-3xl flex justify-center">
-            About the product
+            Product Details
           </h2>
           <div class="card grid grid-cols-1 md:grid-cols-2 gap-10">
             <div class="shadow-lg border-b-8">
               <figure>
-                <img class="about-img h-96 object-cover" />
+                <img class="product-img h-96 object-cover" />
               </figure>
             </div>
             <div class="card-body">
               <h2 class="text-2xl product-id my-5">Mahsulot ID:</h2>
-              <h2 class="card-title about-title text-3xl"></h2>
-              <p class="about-description my"></p>
+              <h2 class="card-title product-title text-3xl"></h2>
+              <p class="product-description my"></p>
               <div class="discountPercentage text-2xl my-5"></div>
-              <div class="about-price font-bold text-3xl"></div>
+              <div class="product-price font-bold text-3xl"></div>
               <div class="card-actions justify-end">
                 <button class="btn btn-primary buy-btn">Buy Now</button>
               </div>
@@ -119,7 +117,7 @@
       </section>
     </main>
 
-    <script type="module" src="./src/js/about.js"></script>
+    <script type="module" src="./src/js/product.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   </body>
 </html>
