--- a/cart.html
+++ b/cart.html
@@ -106,9 +106,9 @@
                 </div>
                 <p class="price">price:500$</p>
                 <div class="flex items-center gap-3">
-                  <button class="btn btn-increase ">+</button>
+                  <button class="btn">+</button>
                   <span class="font semibold text-xl font-bold">0</span>
-                  <button class="btn btn-decrease">-</button>
+                  <button class="btn">-</button>
                 </div>
               </div>
             </li>
